# IQOO

./: README.md
Backend/: .env.example  .gitignore  API_DOCS.md  AUDIT_REPORT.md  README.md  main.py  marketwatch.db  migrate_to_chroma_cloud.py  pyproject.toml  requirements.txt  reset_db.py
Backend/app/agents/: autonomy_orchestrator.py  base.py  discovery_agent.py  dna_forge.py  market_discovery_agent.py  marketing.py  prediction_engine.py  product.py  sales.py  signal_hunter.py  strategy.py
Backend/app/core/: ai_provider.py  config.py  security.py  supabase_client.py
Backend/app/models/: agent_log.py  alert.py  base.py  competitive_dna.py  competitor.py  market.py  prediction.py  signal.py  user.py  warroom.py
Backend/app/providers/: anthropic_provider.py  base.py  groq_provider.py  ollama_provider.py  openrouter_provider.py
Backend/app/routers/: admin.py  agents.py  alerts.py  analysis.py  auth.py  competitors.py  dna.py  graph.py  onboarding.py  predictions.py  signals.py  warroom.py
Backend/app/routes/: competitors.py  dna.py  market_map.py  onboarding.py  signals.py
Backend/app/schemas/: alert.py  competitive_dna.py  competitor.py  prediction.py  requests.py  responses.py  signal.py  warroom.py
Backend/app/services/: chroma_cloud.py  chromadb_service.py  claude.py  competitive_dna.py  competitor_analysis.py  database.py  rag.py  scraper.py  search_tool.py  warroom.py
Backend/app/workers/: background_jobs.py  discovery_queue.py
Backend/tests/: conftest.py  test_competitor_analysis.py  test_providers.py  test_routes.py  test_schemas.py
(+48 files in other folders)
