[project]
name = "marketwatch-backend"
version = "0.3.0"
description = "MarketWatch - Competitive Intelligence Analysis Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.47.0",
    "apscheduler>=3.10.0",
    "supabase>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
markers = ["asyncio: mark test as async"]
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
